--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ header {
   background: rgba(126, 71, 241, 0.4);
   /* background: rgba(228, 216, 255, 0.4); */
   filter: blur(290px);
+  z-index: -1;
 }
 .glow-block {
   position: absolute;
@@ -494,6 +495,7 @@ header {
 }
 
 .bg-grad-what {
+  z-index: -1;
   position: absolute;
   top: 0;
   right: 0;
@@ -624,7 +626,9 @@ header {
 }
 footer{
   background-color: rgb(15,70,144);
-  padding: 5%;
+  padding-top: 4%;
+  padding-right: 4%;
+  padding-left: 4%;
 }
 .nav-item a{
   color: white;
