--- a/pages-css/horizon.css
+++ b/pages-css/horizon.css
@@ -19,8 +19,9 @@
     font-family: 'Ikaros Sans';
 }
 .iith-heading-hor{
-    font-size: 2rem;
-    font-weight: 200;
+    color: #1270ED;
+    font-size: 2.3rem;
+    font-weight: 400;
 }
 .hor-heading-hor{
     font-size: 7.5rem;
